--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -22,9 +22,9 @@ jobs:
 
     - name: Merge changes from upstream
       run: |
-        git checkout main  # Make sure you're on the main branch
-        git merge upstream/main
+        git checkout master  # Make sure you're on the master branch
+        git merge upstream/master
 
     - name: Push changes to fork
       run: |
-        git push origin main  # Push the changes back to your fork
+        git push origin master  # Push the changes back to your fork
