--- a/.github/workflows/sync-fork.yml
+++ b/.github/workflows/sync-fork.yml
@@ -2,7 +2,7 @@ name: Sync Fork with Upstream
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # This will run every day at midnight UTC
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
   workflow_dispatch:  # Allows manual execution
 
 jobs:
@@ -22,8 +22,8 @@ jobs:
 
     - name: Merge changes from upstream
       run: |
-        git checkout master  # Make sure you're on the master branch
-        git merge upstream/master
+        git checkout master  # Ensure you're on the master branch
+        git merge upstream/master --allow-unrelated-histories
 
     - name: Push changes to fork
       run: |
